--- a/main.css
+++ b/main.css
@@ -5,6 +5,9 @@ body, html {
 }
 
 .container {
+	font-family: "Helvetica Neue", "Helvetica", "Arial", "BIZ UDGothic", sans-serif;
+	font-weight: 400;
+	font-style: normal;
 	height:100%;
 	width:100%;
 	display:grid;
